Criação de método para atualizar um post
